// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthGenesisVault can deposit through receive fallback function 1`] = `
Object {
  "calldataByteLength": 4,
  "gasUsed": 74355,
}
`;

exports[`EthGenesisVault migrate migrates from rewardEthToken 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 79700,
}
`;

exports[`EthGenesisVault pulls assets on claim exited assets 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 62350,
}
`;

exports[`EthGenesisVault pulls assets on multiple validators registration 1`] = `
Object {
  "calldataByteLength": 3716,
  "gasUsed": 667342,
}
`;

exports[`EthGenesisVault pulls assets on single validator registration 1`] = `
Object {
  "calldataByteLength": 1476,
  "gasUsed": 336526,
}
`;

exports[`EthGenesisVault update state deducts rewards on first state update 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 150338,
}
`;

exports[`EthGenesisVault update state splits penalty between rewardEthToken and vault 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 100385,
}
`;

exports[`EthGenesisVault update state splits reward between rewardEthToken and vault 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 167438,
}
`;
